--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,7 +43,6 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
 }
 
 /* Elegant Scrollbars */
